--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,10 +1,9 @@
--   id: awesome-lint
-    name: awesome-lint
-    description: ''
-    entry: awesome-lint
-    language: node
-    'types': [javascript]
-    args: []
-    require_serial: false
-    additional_dependencies: ["awesome-lint@1.1.0"]
-    minimum_pre_commit_version: '0'
+- id: awesome-lint
+  name: awesome-lint
+  description: "Run awesome-lint for your awesome list repo"
+  entry: awesome-lint
+  language: node
+  args: []
+  require_serial: false
+  additional_dependencies: ["awesome-lint@1.1.0"]
+  minimum_pre_commit_version: "0"
