--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,6 +4,8 @@
   entry: awesome-lint
   language: node
   args: []
+  files: \.md$
+  verbose: true
   require_serial: false
   additional_dependencies: ["awesome-lint@1.1.0"]
   minimum_pre_commit_version: "0"
